# tradbot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
backtest/: engine.py
data/historical/: BTC_USDC_1d.parquet  BTC_USDT_1d.parquet  ETH_BTC_1d.parquet  SOL_BTC_1d.parquet
scripts/: download_data.py  run_backtest.py  visualize.py
tests/: test_backtest.py  test_feed.py  test_risk.py  test_strategy.py
tradbot/: config.py
tradbot/data/: feed.py
tradbot/execution/: engine.py
tradbot/monitoring/: alerter.py  logger.py  status.py
tradbot/risk/: manager.py
tradbot/storage/: __init__.py  portfolio.py  schema.sql  trades.py
tradbot/strategy/: base.py  dual_ma.py  rsi_mean_reversion.py
